Fixed not showing line breaks in output

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -51,7 +51,7 @@ html {
     width: fit-content;
 }
 
-#textarea1 {
+#textarea1, #textarea2, #decodedMsgBob, #decodedMsgAlice {
     max-width: 99.9%;
     max-height: 200px;
     min-width: fit-content;
